# seth_app

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  classification_analysis.json  main.py  pyproject.toml  requirements.txt  setup.py
docs/: README.md  curation-tools.md  joke-quality-rubric.md
punnyland/: __init__.py  cli.py  jokes.py  ui.py  user.py
punnyland/data/: jokes.json  jokes.json.backup  jokes_backup_pre_cleanup.json  jokes_backup_pre_inclusive_cleanup.json  jokes_backup_pre_reclassify.json  jokes_cleaned_expanded.json
reports/: audit_initial.json  cleanup_report.json
schemas/: jokes.schema.json
tests/: conftest.py  test_cleaner.py  test_cli.py  test_jokes.py  test_schema.py  test_user_profile.py
tools/: advanced_generator.py  analyze_classification.py  audit_jokes.py  auto_reclassify.py  clean_jokes.py  cleanup_invalid_jokes.py  deduplicate_jokes.py  final_batch.py  fix_invalid_jokes.py  fix_overcleaned.py  generate_missing_jokes.py  manual_review.py  merge_additions.py  rate_jokes.py  rate_jokes_improved_backup.py  rate_jokes_old.py  rate_jokes_original.py  remove_problematic_content.py  simple_generator.py
