[project]
name = "punnyland"
version = "2.0.0"
description = "A professional-grade CLI for expertly curated dad jokes with AI-powered classification!"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "rapidfuzz>=3.0.0",
    "jsonschema>=4.25.1",
]

[project.scripts]
punnyland = "punnyland.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
